--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,123 +1,169 @@
-/* .button {
-    background-color: #293462 !important;
-} */
-/* .container{
-    position: center;
-} */
-
 @import url('https://fonts.googleapis.com/css?family=Poppins'); 
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 @import url('https://fonts.googleapis.com/css?family=Cinzel+Decorative');
-.center {
-    text-align: center;
-    /* font-weight: bold; */
-}
-.cover-page {
-    padding: 15%;
-    background-image: url('th:href="@{img/background-cover.jpg}"');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-}
-.main-title {
-    text-align: center;
-    padding: 10px;
-    font-size: 4em;
-    font-family: 'cinzel decorative';
-    background-color: rgba(255, 255, 255, 0.7);
-}
 
-.subtitle {
-    margin-top: 10px;
+:root{
+    --color-primary: #fcc93a;
+    --color-primary-dark: rgb(158, 126, 40);
+    --color-white: #fff;
+    --color-white-dark: rgb(225, 225, 225);
+    --color-black: #000;
+    --color-black-light: rgb(40, 40, 40);
 }
-
-#image{
-    margin-top: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 300px;
-    background-position: center;
-    background-size: cover;
-    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)),
+::-moz-selection {
+    background-color: var(--color-primary);
+    color: var(--color-white);
 }
-.img {
-    width: 100%;
-    height: 100%;
+body{
+    margin-top: 130px !important;
 }
-.container {
-    align-content: center;
+  
+::selection {
+    background-color: var(--color-primary);
+    color: var(--color-white);
 }
-.inner-content{
-    padding-top: 15px;
-    /* font-size: large; */
-    color: #FFF!important;
-}
-.slider_bg_box {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 99vh;
-    z-index: -1;
-  }
-.middle-content {
-    background-color: rgb(39, 36, 37);
-}
-.inner-content {
-    padding: 20px 0;
-    color: #FFF;
-  }
-.slider_bg_box img {
-    width: 100%;
-    height: 99vh;
-    -o-object-fit: cover;
-       object-fit: cover;
-    -o-object-position: center center;
-       object-position: center center;
-}
-
-footer {
-    width: 100%;
-    padding-top: 2em;
-    background-color: rgb(39, 36, 37);
-    color: #FFF;
-}
-
-body {
-    font-family: 'open sans'!important;
-}
-
-footer a{
-    text-decoration: none;
-    color: #FFF;
-}
-footer p{
-    font-size: small;
+.navbar{
+    background-color: var(--color-black) !important;
+    padding-left: 50px;
+    padding-right: 50px;
 }
 .logo-item{
-    font-family: 'cinzel decorative' !important;
-    font-size: 23px;
+    font-family: 'cinzel decorative';
+    font-size: 30px;  
 }
-.card:hover {
-    transform: scale(1.04);
-    border: none;
+.navbar .navbar-item{
+    color: var(--color-primary);
+}
+.navbar .navbar-item:hover{
+    background-color: var(--color-black) !important;
+    color: var(--color-white) !important;
 }
 
-.card p{
-    color: #141414;
-    margin: 4px 0px 4px 0px !important;
+.button{
+    background-color: var(--color-black) !important;
+    color: var(--color-primary) !important;
+    border-color: var(--color-black) I !important;
+    border-radius: 0% !important;
 }
-.card .title:hover{
-    color: #209CEE
+.button:hover{
+    background-color: var(--color-primary) !important;
+    color: var(--color-black) !important;
+    border-color: var(--color-black) I !important;
+    border-radius: 0% !important;
 }
-.description{
-    border-top: 0.0625rem solid #141414;
-    margin: 2rem 0;
-    padding: 1rem 0 0 0;
+.button-yellow{
+    background-color: var(--color-primary) !important;
+    color: var(--color-black) !important;
+    border-radius: 0% !important;
+    width: 100% !important;
 }
-.product-image{
-    max-height: 400px ;
-    max-width: 500px;
+.button-yellow:hover{
+    background-color: var(--color-black) !important;
+    color: var(--color-primary) !important;
+    border-radius: 0% !important;
+}
+.nav-button{
+    background-color: var(--color-black) !important;
+    border-color: var(--color-primary) !important;
+    color: var(--color-primary) !important;
+}
+.nav-button:hover{
+    background-color: var(--color-primary) !important;
+    color: var(--color-black) !important;
+}
+.nav-button-cart{
+    background-color: var(--color-primary) !important;
+    color: var(--color-black) !important;
+    border-color: var(--color-black);
+}
+.card{
+    border: 0px !important;
+    border-radius: 0% !important;
+}
+.card:hover{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(3, 3, 3, 0.19);
+}
+.card .card-image img{
+    border: 0px !important;
+    border-radius: 0% !important;
+}
+.card .card-content .card-button{
+    background-color: var(--color-black) !important;
+}
+.card .card-content .card-button:hover{
+    background-color: var(--color-black-light) !important;
+}
+.default-form input{
+    width: 100% !important;
+    height: 45px !important;
+    border-width: 1px !important;
+    border-radius: 1%;
+    border-color: var(--color-black-light) !important;
+    margin-bottom: 60px I !important;
+}
+.default-form input::placeholder{
+    color: var(--color-black);
+}
+.default-form select{
+    width: 100% !important;
+    height: 45px !important;
+    border-width: 1px !important;
+    border-radius: 0% !important;
+    border-color: var(--color-black-light) !important;
+    margin-bottom: 60px I !important;
+}
+.default-form select option{
+    color: var(--color-black) !important;
+}
+.default-form input:focus{
+    outline: none !important;
+}
+.default-form .form-button{
+    height: 45px !important;
+    background-color: var(--color-black) !important;
+    color: var(--color-primary);
+}
+.default-form .form-button:hover{
+    color: var(--color-white) !important;
+}
+
+.signup-login-form input{
+    width: 100% !important;
+    height: 36px !important;
+    border-width: 0 0 2px 0 !important;
+    border-radius: 0% !important;
+    border-color: var(--color-primary) !important;
+    margin-bottom: 20px !important;
+}
+.signup-login-form input::placeholder{
+    color: var(--color-black);
+}
+
+.signup-login-form input:focus{
+    border-width: 2px !important;
+    border-radius: 0% !important;
+    border-color: var(--color-primary) !important;
+    outline: 0 !important;
+}
+form .input::placeholder{
+    color: var(--color-black);
+}
+form .textarea::placeholder{
+    color: var(--color-black);
+}
+
+footer{
+    background-color: var(--color-black);
+    color: var(--color-primary);
+}
+footer .logo-item{
+    font-family: 'cinzel decorative';
+    font-size: 30px; 
+}
+footer a{
+    color: var(--color-primary);
+}
+footer a:hover{
+    color:var(--color-white);
 }
