--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -22,7 +22,7 @@
   <nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation" th:fragment="navbar">
     <div class="navbar-brand">
       <a class="navbar-item logo-item" th:href="@{/}">
-        Groove
+        Gadget Monkey
       </a>
 
       <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -113,7 +113,7 @@
       </div>
       <div class="column is-3">
         <a class="logo-item" th:href="@{/}">
-          Groove
+          Gadget Monkey
         </a><br>
         Your go to site for gadgets..
       </div>
