--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -22,6 +22,8 @@
                                 <th>Quantity</th>
                                 <th>Products</th>
                                 <th>Total</th>
+                                <th>Status</th>
+                                <th>Approximate Delivery Date</th>
                                 <!-- <th>Remove from favorite</th> -->
                             </tr>
                         </thead>
@@ -37,6 +39,8 @@
                                     <td>
                                         <p th:text="${order.total}"> Add to cart </p>
                                     </td>
+                                    <td>Approved by Shop</td>
+                                    <td>25 August</td>
                                     <!-- <td><p th:text="${order.g}"> Remove </p></td> -->
                                 </tr>
                             </div>
