--- a/src/main/resources/templates/view_orders.html
+++ b/src/main/resources/templates/view_orders.html
@@ -77,7 +77,21 @@
                                         </tr>
                                     </div>
                                 </tbody>
+
                             </table>
+                            <form action="">
+                                <div class="select">
+                                    <select>
+                                        <option>Select Status</option>
+                                        <option>Order Cancelled</option>
+                                        <option>Approved by Shop</option>
+                                        <option>Out For Delivery</option>
+                                        <option>Delivered</option>
+                                    </select>
+                                </div>
+                                <input type="text" placeholder="Approximate Delivery Date">
+                                <button>Submit</button>
+                            </form>
                         </div>
                     </div>
                 </div>
